git commit -m "updated"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="msg-cont">
-        <p class="msg">Your Message</p>
+        <p id="msg" class="red green">Your Message</p>
     </div>
 
 
